--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.55.4",
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
@@ -37,7 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
