--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-router": "^7.7.1",
     "react-router-dom": "^6.26.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
